syntax = "proto3";
package ProtobufGen;

//请求登录
message ReqLogin{
    string username = 1; //用户名
    string password = 2; //密码
}

//下发登录
message ResLogin{
    int32 resCode = 1; //返回码，0 成功 1 账号不存在 2 账号密码不匹配 3 账号已在线
    int64 userId = 2; //用户id，返回码为0时有效
    string username = 3; //用户名，返回码为0时有效
}

//请求登出
message ReqLogout{

}

//下发登出
message ResLogout{
    
}

//请求注册
message ReqRegister{
    string username = 1; //用户名
    string password = 2; //密码
}

//下发注册
message ResRegister{
    int32 resCode = 1; //返回码，0 成功 1 账号不合法 2 密码不合法 3 账号已存在
    int64 userId = 2; //用户id，返回码为0时有效
    string username = 3; //用户名，返回码为0时有效
}

//请求游客登陆
message ReqVisitorLogin{

}